# HNC-rpc

./: CMakeLists.txt  README.md  hnc_rpc.h
include/: hnc_rpc_channel.h  hnc_rpc_common.h  hnc_rpc_d.h  hnc_rpc_header.pb.h  hnc_rpc_server.h
src/: hnc_rpc_channel.cpp  hnc_rpc_d.cpp  hnc_rpc_header.pb.cc  hnc_rpc_header.proto  hnc_rpc_server.cpp
test/: CMakeLists.txt  rpc_test.pb.cc  rpc_test.proto
test/include/: rpc_test.pb.h
test/rpc_caller/: CMakeLists.txt  test_rpc_caller.cpp
test/rpc_server/: CMakeLists.txt  test_rpc_server.cpp
